# coral-example-app

./: Cargo.toml  application.yaml  registry.toml
app/: Cargo.toml
app/src/: main.rs  session.rs
context/: coral-agent.toml
discord/: Cargo.toml  coral-agent.toml
discord/src/: main.rs  timeout.rs
discord/src/discord/: mod.rs  thread_message.rs  thread_watcher.rs  tools.rs
