[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
coral-rs = "0.1.3"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
clap = { version = "4.5.45", features = ["derive", "env"] }
serenity = { version = "0.12.4", features = ["client", "gateway", "rustls_backend", "model"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
humantime = "2.2.0"