[package]
name = "discord"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12.4", features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tracing = "0.1.41"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
clap = { version = "4.5.45", features = ["derive", "env"] }
coral-rs = "0.1.5"
futures = "0.3.31"
serde = "1.0.219"
serde_json = "1.0.143"
thiserror = "2.0.16"
humantime = "2.2.0"